--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
 
     <string name="action_settings">Cerrar Sesion</string>
     <string name="activity_verbecas">BECAS SUGERIDAS</string>
+
+    <item name="visible" type="id"/>
+    <item name="masked" type="id"/>
 </resources>
