--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <string name="action_settings">Cerrar Sesion</string>
     <string name="activity_verbecas">BECAS SUGERIDAS</string>
+    <string name="btnConfirmar">Confirmar</string>
 
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
