CARROUSEL EN ANUNCIOS
SE GENERO EL CARROUSEL EN LOS ANUNCIOS PARA QUE SE VEAN MEJOR LAS
IMAGENES Y/O INFORMACION. TIENE UN LAYOUT EL CARROUSEL ASIQUE SE LE
PUEDE PONER LO QUE QUIERAN. FALTA HACER EL TIMMER PARA QUE PASEN LAS
PAGINAS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
 
     <item name="visible" type="id" />
     <item name="masked" type="id" />
+    <string name="title_activity_pruebaactivity">pruebaactivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
