--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <item name="masked" type="id" />
     <string name="title_activity_pruebaactivity">pruebaactivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="NoDatos">No se encontraron becas</string>
 </resources>
