--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="title_activity_pruebaactivity">pruebaactivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="NoDatos">No se encontraron becas</string>
+    <string name="fecha_anuncio">Fecha:  </string>
 </resources>
