--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Registrarse</string>
     <string name="action_sign_in_short">LOGIN/REGISTRO</string>
     <string name="error_invalid_email">La direccion de mail es invalida</string>
     <string name="error_invalid_password">El password es muy corto</string>
